Mobile Bug Fixes
-Fixed z-indexing of carousel
-Tweaked footer styling
-Fixed about page off-center text

--- a/src/css/About.scss
+++ b/src/css/About.scss
@@ -2,14 +2,11 @@
 	padding: 5rem;
 	padding-bottom: 0;
 	.row {
-		margin: 0;
+		margin: 1rem;
 	}
 	.middle-row {
 		margin-top: 2rem;
 		margin-bottom: 10rem;
-	}
-	p {
-		margin: 0 6rem;
 	}
 	p.link-text {
 		font-family: 'Karla', sans-serif;
