--- a/src/css/Footer.scss
+++ b/src/css/Footer.scss
@@ -73,6 +73,9 @@
 		}
 		.col {
 			padding: 0;
+			display: flex;
+			flex-direction: column;
+			align-items: end;
 		}
 		.logo-row {
 			border-top: 2px solid #ffffff;
@@ -86,11 +89,11 @@
 		}
 		.tbf-logo {
 			border: 2px solid #ffffff;
-			width: 30vw;
-			height: 30vw;
+			width: 34vw;
+			height: 34vw;
 		}
 		.wdb-logo {
-			width: 30vw;
+			width: 34vw;
 			margin-top: 2rem;
 		}
 	}
